--- a/themes/hugo-creative-theme/layouts/partials/skills.html
+++ b/themes/hugo-creative-theme/layouts/partials/skills.html
@@ -4,18 +4,13 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 {{ with .Site.Params.skills.headline }}
-                    <h2 class="section-heading">{{ . }}</h2>
+                  <h2 class="section-heading">{{ . }}</h2>
                 {{ end }}
-                    <hr class="light">
                 {{ with .Site.Params.skills.description }}
-                <div class="skills">{{ . | markdownify }}</div>
+                  <p class="text-faded">{{ . | markdownify }}</p>
                 {{ end }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
                 {{ with .Site.Params.skills.buttonText }}
-                <a href="#portfolio" class="btn btn-primary btn-xl page-scroll">{{ . }}</a>
+                  <a href="#portfolio" class="btn btn-primary btn-xl page-scroll">{{ . }}</a>
                 {{ end }}
             </div>
         </div>
