--- a/themes/hugo-creative-theme/layouts/index.html
+++ b/themes/hugo-creative-theme/layouts/index.html
@@ -29,7 +29,7 @@
             {{ partial "modals.html" . }}
         {{ end }}
 
-        {{ if .Site.Params.cv }}
+        {{ if .Site.Params.knowledgebase }}
             {{ partial "aside.html" . }}
         {{ end }}
 
@@ -40,7 +40,7 @@
         {{ partial "js.html" . }}
 
         {{ partial "footer.html" . }}
-        
+
         {{ partial "last.html" . }}
     </body>
 </html>
