--- a/themes/hugo-creative-theme/layouts/partials/last.html
+++ b/themes/hugo-creative-theme/layouts/partials/last.html
@@ -1,9 +1,12 @@
 {{ "<!-- Favicon -->" | safeHTML }}
 <link async rel="shortcut icon" href="{{ .Site.Params.favicon | absURL }}">
+<link rel="preload" as="image" href="{{ "img/header.jpg" | absURL }}" />
 {{ "<!-- Bootstrap Core CSS -->" | safeHTML }}
 <link async rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}" type="text/css">
 {{ "<!-- Custom Fonts -->" | safeHTML }}
 <link async rel="stylesheet" href="{{ "font-awesome/css/all.min.css" | absURL }}" type="text/css">
+<link rel="preload" href="{{ "font-awesome/webfonts/fa-solid-900.woff2" | absURL }}" type="font/woff2" as="font" crossorigin>
+<link rel="preload" href="{{ "font-awesome/webfonts/fa-brands-400.woff2" | absURL }}" type="font/woff2" as="font" crossorigin>
 {{ "<!-- Plugin CSS -->" | safeHTML }}
 <link async rel="stylesheet" href="{{ "css/animate.min.css" | absURL }}" type="text/css">
 {{ "<!-- Custom CSS -->" | safeHTML }}
