redesign portfolio section using responsive cards

--- a/themes/hugo-creative-theme/layouts/index.html
+++ b/themes/hugo-creative-theme/layouts/index.html
@@ -24,8 +24,9 @@
             {{ partial "skills.html" . }}
         {{ end }}
 
+        
         {{ if .Site.Data.projects }}
-            {{ partial "portfolio.html" . }}
+            {{ partial "portfolio-cards.html" . }}
             {{ partial "modals.html" . }}
         {{ end }}
 
