--- a/themes/hugo-creative-theme/layouts/partials/portfolio-cards.html
+++ b/themes/hugo-creative-theme/layouts/partials/portfolio-cards.html
@@ -16,13 +16,17 @@
           <div style="background-image: linear-gradient(rgb(240 95 64 / 11%),#000000), url('/img/portfolio/{{.img}}')" class="card-img-top"  alt="Card image cap"></div>
           {{ if and .category .title }}
           {{ if .category }}
-          <div class="card-body">
-            {{ if .title }}
-            <h5 class="card-title">{{.title}}</h5>
-            {{end}}
+          <div class="card-body mnh">
+            <div>
+              {{ if .title }}
+              <h5 class="card-title">{{.title}}</h5>
+              {{end}}
+            </div>           
             {{ if .category }}
             <p class="card-text">{{.category}}</p>
             {{end}}
+          </div>
+          <div class="card-body is-flex">
           </div>
           {{end}}
           {{end}}
