add portfolio scrol tag

--- a/themes/hugo-creative-theme/layouts/partials/portfolio-cards.html
+++ b/themes/hugo-creative-theme/layouts/partials/portfolio-cards.html
@@ -1,3 +1,4 @@
+<section id="portfolio">
 {{ with .Site.Params.portfolio.modal.headline }}
 <div class="container">
 <div class="row">
@@ -35,3 +36,4 @@
     </div>
   </div>
 </div>  
+</section>
